--- a/2 semestr/json_request/index.html
+++ b/2 semestr/json_request/index.html
@@ -14,7 +14,7 @@
             var message_div = document.querySelector('#message');
 
             var xhr = new XMLHttpRequest();
-            xhr.open('GET', 'http://kodaktor.ru/j/users', true);
+            xhr.open('GET', 'https://kodaktor.ru/j/users', true);
             xhr.send();
 
             xhr.onreadystatechange = function() {
